--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,118 @@ soundfile
 bestmix
 allthree
 
+Package            Version
+------------------ -------------
+annotated-types    0.6.0
+anyio              4.3.0
+appnope            0.1.3
+asttokens          2.4.1
+attrs              23.2.0
+aubio              0.4.9
+audioread          3.0.1
+blinker            1.7.0
+certifi            2023.7.22
+cffi               1.16.0
+charset-normalizer 3.3.2
+click              8.1.7
+click-plugins      1.1.1
+cligj              0.7.2
+comm               0.2.0
+contourpy          1.2.0
+crypto             1.4.1
+cryptography       41.0.5
+cycler             0.12.1
+Cython             3.0.5
+debugpy            1.8.0
+decorator          5.1.1
+ecdsa              0.18.0
+essentia           2.1b6.dev1177
+executing          2.0.1
+fastapi            0.109.2
+fiona              1.9.5
+Flask              3.0.0
+fonttools          4.45.1
+geopandas          0.14.2
+h11                0.14.0
+httptools          0.6.1
+idna               3.4
+iniconfig          2.0.0
+ipykernel          6.27.1
+ipython            8.18.1
+itsdangerous       2.1.2
+jedi               0.19.1
+Jinja2             3.1.2
+joblib             1.3.2
+jupyter_client     8.6.0
+jupyter_core       5.5.0
+kiwisolver         1.4.5
+lazy_loader        0.3
+librosa            0.10.1
+llvmlite           0.42.0
+madmom             0.16.1
+MarkupSafe         2.1.3
+matplotlib         3.8.3
+matplotlib-inline  0.1.6
+mido               1.3.0
+mpmath             1.3.0
+msgpack            1.0.7
+Naked              0.1.32
+nest-asyncio       1.5.8
+numba              0.59.0
+numpy              1.26.2
+packaging          23.2
+pandas             2.1.4
+parso              0.8.3
+pexpect            4.9.0
+Pillow             10.1.0
+pip                24.0
+platformdirs       4.0.0
+pluggy             1.5.0
+polyglot           16.7.4
+pooch              1.8.1
+prompt-toolkit     3.0.41
+psutil             5.9.6
+ptyprocess         0.7.0
+pure-eval          0.2.2
+pycparser          2.21
+pycryptodome       3.19.0
+pydantic           2.6.2
+pydantic_core      2.16.3
+pydub              0.25.1
+Pygments           2.17.2
+pyOpenSSL          23.3.0
+pyparsing          3.1.1
+pyproj             3.6.1
+pytest             8.2.2
+python-dateutil    2.8.2
+python-dotenv      1.0.1
+python-multipart   0.0.9
+pytz               2023.3.post1
+PyYAML             6.0.1
+pyzmq              25.1.1
+requests           2.31.0
+scikit-learn       1.4.1.post1
+scipy              1.11.4
+setuptools         69.1.1
+shapely            2.0.2
+shellescape        3.8.1
+six                1.16.0
+sniffio            1.3.0
+soundfile          0.12.1
+soxr               0.3.7
+stack-data         0.6.3
+starlette          0.36.3
+sympy              1.12
+threadpoolctl      3.3.0
+tornado            6.4
+traitlets          5.14.0
+typing_extensions  4.9.0
+tzdata             2023.4
+urllib3            2.1.0
+uvicorn            0.27.1
+uvloop             0.19.0
+watchfiles         0.21.0
+wcwidth            0.2.12
+websockets         12.0
+Werkzeug           3.0.1
+wheel              0.41.3
